# cmakefmt

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  FEATURES.md  LICENSE  README.md  analysis.md  changelog.tera  cliff.toml  cog.toml  devenv.nix  dprint.json  hk.pkl  mise.toml  specs.md  zizmor.yml
crates/cmakefmt/: Cargo.toml  build.rs  release-procedure.md
crates/cmakefmt-cli/: Cargo.toml
crates/cmakefmt-cli/src/: main.rs  trace_summary.rs
crates/cmakefmt-cli/tests/: cli_tests.rs
crates/cmakefmt-dprint/: Cargo.toml
crates/cmakefmt-dprint/src/: lib.rs
crates/cmakefmt-dprint/tests/: dprint_integration.rs
crates/cmakefmt/benches/: formatter_fixtures_bench.rs
crates/cmakefmt/src/: format_text.rs  instrumentation.rs  lib.rs  post_process.rs  printer.rs  util.rs
crates/cmakefmt/src/configuration/: load.rs  mod.rs  types.rs
crates/cmakefmt/src/generation/: gen_command.rs  gen_file.rs  mod.rs  signatures.rs
crates/cmakefmt/src/parser/: ast.rs  mod.rs  parse.rs  token.rs
crates/cmakefmt/tests/: formatter_tests.rs
crates/cmakefmt/tests/formatter/01_wrapping/01_line_width/: boundary_one_over.in.cmake  boundary_one_over.out.cmake  custom_line_width_40.in.cmake  custom_line_width_40.out.cmake  indentation_exceeds_width.in.cmake  indentation_exceeds_width.out.cmake  indentation_forces_wrapping.in.cmake  indentation_forces_wrapping.out.cmake  multiple_commands.out.cmake  token_exceeds_width.out.cmake
crates/cmakefmt/tests/formatter/01_wrapping/02_cascade/: no_keywords_step1_to_step3.in.cmake  step1_single_line.out.cmake  step2_keyword_group_escalation.out.cmake  step2_keyword_groups_public_private.in.cmake  step2_keyword_groups_public_private.out.cmake  step2_multiple_keyword_groups.out.cmake  step2_positional_before_keyword.in.cmake  step2_positional_before_keyword.out.cmake  step2_positional_packing_overflow.in.cmake  step2_pre_keyword_positional.in.cmake  step2_pre_keyword_positional.out.cmake  step3_one_per_line.out.cmake
crates/cmakefmt/tests/formatter/01_wrapping/03_vertical/: one_per_line.in.cmake  one_per_line.out.cmake  vertical_with_keywords.in.cmake
crates/cmakefmt/tests/formatter/01_wrapping/04_first_arg_same_line/: false_no_keywords_step3.in.cmake  false_step2.out.cmake  false_step3.in.cmake  false_step3.out.cmake  false_wraps_first_arg.in.cmake  false_wraps_first_arg.out.cmake  overflow_tolerated.in.cmake  overflow_tolerated.out.cmake  true_default.out.cmake
crates/cmakefmt/tests/formatter/01_wrapping/05_wrap_arg_threshold/: counting_includes_keywords.out.cmake  genex_counts_as_one.out.cmake  threshold_1.in.cmake  threshold_1.out.cmake  threshold_forces_wrap.in.cmake  threshold_forces_wrap.out.cmake
crates/cmakefmt/tests/formatter/01_wrapping/06_magic_trailing_newline/: empty_not_affected.in.cmake  false_collapses.out.cmake  prevents_collapse.in.cmake  set_no_keywords.in.cmake  set_no_keywords.out.cmake  step2_still_attempted.in.cmake  step2_still_attempted.out.cmake
crates/cmakefmt/tests/formatter/02_indentation/01_indent_width/: applies_to_block_body.out.cmake  width_8.in.cmake  width_8.out.cmake
crates/cmakefmt/tests/formatter/02_indentation/02_indent_style/: tab_basic.in.cmake  tab_mixed_continuation.in.cmake  tab_mixed_continuation.out.cmake  tab_mixed_continuation_wrapped.in.cmake  tab_mixed_continuation_wrapped.out.cmake  tab_visual_width_for_line_calc.out.cmake
crates/cmakefmt/tests/formatter/02_indentation/03_continuation_indent/: explicit_4.in.cmake  no_keywords_uses_indent_width.out.cmake  relative_to_keyword.out.cmake  relative_to_keyword_wrapped.in.cmake  relative_to_keyword_wrapped.out.cmake  width_1.in.cmake  width_1.out.cmake  width_1_wrapped.in.cmake  width_1_wrapped.out.cmake
crates/cmakefmt/tests/formatter/02_indentation/04_genex_indent/: explicit_2_with_indent_4.in.cmake  explicit_2_with_indent_4.out.cmake  nested_genex_indent.in.cmake  nested_genex_indent.out.cmake  null_inherits.out.cmake  relative_to_dollar_angle.in.cmake  relative_to_dollar_angle.out.cmake  tab_genex_remainder_tabs.in.cmake  tab_genex_remainder_tabs_tabs.out.cmake
crates/cmakefmt/tests/formatter/03_blank_lines/01_max_blank_lines/: blank_lines_in_args_discarded.in.cmake  blank_lines_in_args_discarded.out.cmake  leading_stripped.in.cmake  max_2_allows_two.in.cmake  max_2_allows_two.out.cmake  zero_collapses_all.out.cmake
crates/cmakefmt/tests/formatter/03_blank_lines/02_min_blank_lines_between_blocks/: all_block_types.in.cmake  attached_comments.in.cmake  bracket_comment_attached.out.cmake  first_statement_no_insert.in.cmake  insert_before_block.in.cmake  insert_before_block.out.cmake  min_2.out.cmake  multi_attached_comments.in.cmake  (+3 more)
crates/cmakefmt/tests/formatter/17_interactions/: align_trailing_comments_plus_gap.out.cmake  arg_groups_plus_blank_sections.in.cmake  arg_groups_plus_blank_sections.out.cmake  blank_between_sections_plus_max_blank_lines.out.cmake  cascade_inline_ignores_closing_angle.in.cmake  cascade_inline_ignores_closing_angle.out.cmake  first_arg_single_line_no_effect.out.cmake  genex_never_ignores_closing_angle.in.cmake  genex_never_ignores_indent_width.in.cmake  indent_style_tab_plus_alignment.in.cmake  indent_style_tab_plus_alignment.out.cmake  max_blank_lines_sort_group_boundaries.in.cmake  preserve_comment_width_no_effect.out.cmake  sort_args_then_align_arg_groups.out.cmake  vertical_plus_threshold.out.cmake  wrap_threshold_plus_magic.in.cmake  wrap_threshold_plus_magic.out.cmake  wrap_threshold_wins_over_magic.in.cmake  wrap_threshold_wins_over_magic.out.cmake
crates/cmakefmt/tests/formatter/issues/: 2.in.cmake  2.out.cmake  4.in.cmake  4.out.cmake  7.in.cmake  7.out.cmake  7_multiline_exceeds_width.in.cmake  7_multiple_sections_no_collapse.in.cmake  7_target_compile_definitions.in.cmake  7_target_compile_definitions.out.cmake  7_target_include_directories.in.cmake  7_target_include_directories.out.cmake  7_target_link_libraries.in.cmake  7_target_link_libraries.out.cmake  comment_only_args.in.cmake  deeply_nested_blocks.in.cmake  empty_command.in.cmake  unicode_in_arguments.in.cmake
(+837 files in other folders)
