[workspace]
members = [
    "crates/cmakefmt",
    "crates/cmakefmt-cli",
    "crates/cmakefmt-dprint",
]
resolver = "3"

[profile.bench]
debug = 2
split-debuginfo = "unpacked"
strip = "none"

[profile.release]
lto = true
opt-level = 2

# Size-optimized profile for the dprint WASM plugin.
[profile.release-wasm]
inherits = "release"
opt-level = "s"
