[package]
name = "cmakefmt-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
description = "CMake formatter CLI"

[[bin]]
name = "cmakefmt"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
cmakefmt = { workspace = true, features = ["cli"] }
glob.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-chrome.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
