[package]
name = "cmakefmt-dprint"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
description = "dprint plugin for CMake formatting"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.102"
cmakefmt = { package = "cmakefmt-rs", version = "0.1.0", path = "../cmakefmt" }
dprint-core = { version = "0.67.4", features = ["formatting", "wasm"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
