[package]
name = "cmakefmt-dprint"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
description = "dprint plugin for CMake formatting"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
cmakefmt.workspace = true
dprint-core.workspace = true
serde.workspace = true
serde_json.workspace = true
