[package]
name = "cmakefmt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "CMake formatter"
readme = "../../README.md"
keywords = ["cmake", "formatter", "linter"]
categories = ["command-line-utilities", "development-tools"]

[lib]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"], optional = true }
glob = "0.3.3"
memchr = "2.8.0"
logos = "0.16.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
toml = "0.9.8"
tracing = "0.1.44"

[features]
cli = ["dep:clap"]

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
imara-diff = "0.2.0"
rstest = "0.26.1"
serde_json = "1.0.149"

[[bench]]
name = "formatter_fixtures_bench"
harness = false
