[package]
name = "cmakefmt-rs"
version.workspace = true
authors.workspace = true
categories = ["command-line-utilities", "development-tools"]
edition.workspace = true
homepage.workspace = true
keywords = ["cmake", "formatter", "linter"]
license.workspace = true
readme = "../../README.md"
repository.workspace = true
description = "CMake formatter"

[lib]
name = "cmakefmt"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, optional = true }
glob.workspace = true
logos.workspace = true
memchr.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true

[features]
cli = ["dep:clap"]

[dev-dependencies]
criterion.workspace = true
imara-diff.workspace = true
rstest.workspace = true
serde_json.workspace = true

[[bench]]
name = "formatter_fixtures_bench"
harness = false
